# Travelling-Salesman-Problem

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  run.sh  tsp.c
include/: fstsp_vds.h  genetic.h  main.h  tsp.h  utils.h
output/: log_att48.txt  log_d657.txt  model_att48.lp  model_opt.txt
output/lp/: model_GG_att48.lp  model_GG_burma14.lp  model_GG_ulysses16.lp  model_GG_ulysses22.lp  model_MTZLS_burma14.lp  model_MTZLS_ulysses16.lp  model_MTZLS_ulysses22.lp  model_MTZL_burma14.lp  model_MTZL_ulysses16.lp  model_MTZL_ulysses22.lp  model_MTZ_att48.lp  model_MTZ_burma14.lp  model_MTZ_ulysses16.lp  model_MTZ_ulysses22.lp
performance/: compact.csv
results/comp/: tsp_comp_324509.err  tsp_comp_324510.err  tsp_comp_324516.err
results/iter/: tsp_iter_324518.err  tsp_iter_324519.err  tsp_iter_324520.err
results/math/: tsp_math_324521.err
scores/comp/: compact_all.csv  compact_best.csv  (+16 more)
scripts/: build-project.slurm  comp-tsp.slurm  comp32-tsp.slurm  comp64-tsp.slurm  gen0-tsp.slurm  gen00-tsp.slurm  gen01-tsp.slurm  gen1-tsp.slurm  gen10-tsp.slurm  gen11-tsp.slurm  gen2-tsp.slurm  gen20-tsp.slurm  gen21-tsp.slurm  gen3-tsp.slurm  gen30-tsp.slurm  gen31-tsp.slurm  heur-tsp-opt.slurm  heur-tsp.slurm  iter-tsp-opt.slurm  iter-tsp.slurm  math-tsp.slurm  meta-tsp.slurm  parserScores.py  perfProf.py  perfprof.py  randomGenerator.py  run-opt.sh  run.sh  tabu-tsp.slurm  tsp-mtz-1.slurm  tsp-mtz-2.slurm  tsp-mtz-3.slurm  tsp-mtz-4.slurm  tsp.slurm
src/: compact.c  fstsp_vds.c  genetic.c  heuristic.c  main.c  math_heuristic.c  meta_heuristic.c  tsp.c  utils.c
(+155 files in other folders)
